Was not working, so went back and modified to simple scraper

--- a/manifest.json
+++ b/manifest.json
@@ -3,13 +3,12 @@
   "name": "chrome extension",
   "description": "Runs a script when the user clicks the action toolbar icon.",
   "version": "1.0",
-  "permissions": ["scripting", "activeTab"],
+  "permissions": ["scripting", "activeTab", "storage"],
   "host_permissions": ["*://openrouter.ai/*"],
   "content_scripts": [
     {
-        "matches": ["*://*.nytimes.com/*"],
-        "js": ["./scripts/contentScript.js"],
-        "css": ["./css/styles.css"]
+        "matches": ["*://*.livemint.com/*", "*://*.nytimes.com/*"],
+        "js": ["./scripts/contentScript.js", "./scripts/Readability.js"]
     }
   ],
   "background": {
@@ -19,7 +18,6 @@
     "16": "image.png"
   },
   "action": {
-    "default_title": "chrome extension",
-    "default_popup": "popup.html"
+    "default_title": "chrome extension"
   }
 }
