--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,12 @@
   "description": "Runs a script when the user clicks the action toolbar icon.",
   "version": "1.0",
   "permissions": ["scripting", "activeTab", "storage"],
-  "host_permissions": ["*://openrouter.ai/*"],
+  "host_permissions": [
+    "https://openrouter.ai/*", 
+     "https://api.openrouter.ai/*",
+    "*://*.livemint.com/*",
+    "*://*.nytimes.com/*"
+    ],
   "content_scripts": [
     {
         "matches": ["*://*.livemint.com/*", "*://*.nytimes.com/*"],
@@ -12,7 +17,8 @@
     }
   ],
   "background": {
-    "service_worker": "./scripts/background.js"
+    "service_worker": "scripts/background.js",
+    "type": "module"
   },
   "icons": {
     "16": "image.png"
